# scallops

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Dockerfile  LICENSE  Manifest.in  README.md  pyproject.toml  requirements.doc.txt  requirements.txt  requirements.ufish.txt  setup.py
.github/workflows/: docker.yml  release.yml  test.yml
docs/: api.rst  command_line.rst  conf.py  custom_features.rst  example_commands.rst  example_notebooks.rst  faq.rst  features.rst  index.rst  install.rst  outputs.rst  registration_opts.rst  workflows.rst
docs/_static/: README
docs/_static/css/: custom.css
docs/_templates/autosummary/: method.rst
docs/notebooks/: End-to-End-API.ipynb  End-to-End.ipynb  barrel_distortion_estimation.ipynb  data_structures.ipynb  ops.ipynb  plotting.ipynb
scallops/: __init__.py  __main__.py  _bioio_zarr_reader.py  _demux.py  _version.py  basic.py  codebook.py  colormap_utils.py  envir.py  frameshift.py  illumination_correction.py  io.py  qc.py  reads.py  spots.py  stats.py  utils.py  xr.py  zarr_io.py
scallops/cli/: arg_parser.py  dialout.py  dialout_main.py  extract_crops.py  extract_crops_main.py  features.py  features_main.py  find_objects.py  find_objects_main.py  illumination_correction.py  illumination_correction_main.py  norm_features.py  norm_features_main.py  pooled_if_sbs.py  pooled_if_sbs_main.py  rank_features.py  rank_features_main.py  register.py  register_main.py  segment.py  segment_main.py  stitch.py  stitch_main.py  util.py
scallops/dask_relabeling/relabel/: __init__.py  chunkops.py  relabeling.py  utils.py
scallops/datasets/: __init__.py
scallops/experiment/: __init__.py  abc.py  elements.py  util.py
scallops/features/: __init__.py  _plot.py  agg.py  bounding_box.py  colocalization.py  constants.py  cp_measure_wrapper.py  decomposition.py  find_objects.py  generate.py  image_quality.py  info.py  intensity.py  intensity_distribution.py  map_eval.py  neighbors.py  normalize.py  other.py  preprocessing.py  rank.py  spots.py  texture.py  util.py
scallops/registration/: __init__.py  crosscorrelation.py  itk.py  landmarks.py
scallops/segmentation/: __init__.py  _propagate.cpp  _propagate.pyx  cellpose.py  dask.py  heap.pxd  propagation.py  stardist.py  util.py  watershed.py
scallops/stitch/: _align.py  _plots.py  _radial.py  _radial_optim.py  _stitch.py  fuse.py  shift_utils.py  utils.py
scallops/tests/: conftest.py  cross_correlation.py  test_base_call_mismatches.py  test_cell_profiler_features.py  test_channel_crosstalk_correct.py  test_channel_thresholds.py  test_codebook.py  test_decomposition.py  test_e2e_sbs.py  test_features.py  test_features_preprocessing.py  test_grid_layout.py  test_illumination_correction.py  test_io.py  test_map_images.py  test_merge_sbs_phenotype.py  test_norm_rank_features.py  test_overlap.py  test_reads.py  test_register_cli.py  test_registration.py  test_segmentation.py  test_spots.py  test_stats.py  test_stitch.py  test_utils.py  test_wdl.py  test_xr.py
scallops/tests/data/align/: align_between_time_channel.tif  align_within_time_channels.tif
scallops/tests/data/annotated/: 10X_A1_Tile-102.annotated.npz
scallops/tests/data/dataframe/: sample_df_well1.pq
scallops/tests/data/experimentC/: barcodes.csv
scallops/tests/data/experimentC/input/10X_c1-SBS-1/: 10X_c1-SBS-1_A1_Tile-102.sbs.tif  (+1 more)
scallops/tests/data/features/: intensity.pkl  plotting-notebook-example-summary-stats.pq
scallops/tests/data/nd2/: Well1_Point1_0001_ChannelDAPI,Cy3,A594,Cy5,Cy7_Seq0001.nd2
scallops/tests/data/process_fig4/: 10X_A1_Tile-102.aligned.tif  10X_A1_Tile-102.annotate_SBS.tif  10X_A1_Tile-102.bases.csv  10X_A1_Tile-102.cells.csv  10X_A1_Tile-102.cells.tif  10X_A1_Tile-102.log.tif  10X_A1_Tile-102.maxed.tif  10X_A1_Tile-102.nuclei.tif  10X_A1_Tile-102.peaks.tif  10X_A1_Tile-102.phenotype.csv  10X_A1_Tile-102.phenotype_aligned.tif  10X_A1_Tile-102.reads.csv  10X_A1_Tile-102.std.tif  combined.csv
scallops/tests/data/tif/: 10X_c0-DAPI-p65ab_A1_Tile-7.phenotype.tif
scallops/tests/miniwdl_local/: __init__.py  local_runner.py
scallops/visualize/: __init__.py  composite.py  crosstalk.py  distribution.py  grid_layout.py  grid_layout_constants.py  heatmap.py  histogram.py  imshow.py  napari.py  registration.py  segmentation.py  stitch.py  utils.py  widgets.py
wdl/: ops_tasks.wdl  ops_workflow.wdl  stitch_tasks.wdl  stitch_workflow.wdl  utils.wdl
(+18 files in other folders)
